bugfix: spacing
feature: add /me handler

--- a/src/assets/styles/message.css
+++ b/src/assets/styles/message.css
@@ -6,10 +6,11 @@
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 2px;
-  padding-bottom: 4px;
+  padding-bottom: 2px;
 }
 .message > img {
   vertical-align: middle;
+  margin-bottom: 2px;
 }
 .message-url {
   text-decoration: none;
@@ -23,6 +24,9 @@
 }
 .message-switching:nth-child(odd) {
   background: rgba(70, 70, 70, 0.178);
+}
+.message-action {
+  font-style: italic;
 }
 .username {
   text-shadow: 0 0 rgb(255, 0, 0);
